--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <div class="inbox-banner">
-        INBOX FOR BUYING
+        Fillup the Form/ Inbox for Buying
     </div>
 </body>
 </html>
