--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Customer Info Form -->
     <div class="form-section">
         <h2>Order / Inquiry Form</h2>
-        <form action="https://formsubmit.co/arnobzzz@gmail.com" method="POST">
+        <form action="https://formsubmit.co/arnob.paul.2000@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
             <input type="text" name="address" placeholder="Full Address" required>
