--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
 
     <h3>Payment via BKASH</h3>
     <div class="bkash-info">
-      <p>Send payment to BKASH number: <strong>YOUR_BKASH_NUMBER</strong></p>
+      <p>Send payment to BKASH number: <strong>01860066158</strong></p>
       <p>Then enter your transaction ID here:</p>
       <input type="text" id="bkash-txid" placeholder="Transaction ID">
       <button id="confirm-payment">Confirm Payment</button>
