--- a/products.html
+++ b/products.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1 class="logo">I’mperfect</h1>
+    <div class="container header-main">
+      <div class="logo">I’mperfect</div>
       <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Shop</a>
@@ -19,15 +19,13 @@
   </header>
 
   <section class="product-list container">
-    <h2>Our Products</h2>
-    <div id="product-grid" class="product-grid">
-      <!-- Supabase JS will load here -->
-    </div>
+    <h2>All Products</h2>
+    <div id="product-grid" class="product-grid"></div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 I’mperfect. All Rights Reserved.</p>
+      &copy; 2025 I’mperfect. All rights reserved.
     </div>
   </footer>
 
