--- a/checkout.html
+++ b/checkout.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1 class="logo">I’mperfect</h1>
+    <div class="container header-main">
+      <div class="logo">I’mperfect</div>
       <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Shop</a>
@@ -20,21 +20,23 @@
 
   <section class="checkout container">
     <h2>Your Cart</h2>
-    <div id="cart-items"></div>
-    <div id="cart-summary"></div>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-summary" class="cart-summary"></div>
 
-    <h3>Payment via BKASH</h3>
-    <div class="bkash-info">
-      <p>Send payment to BKASH number: <strong>01860066158</strong></p>
-      <p>Then enter your transaction ID here:</p>
-      <input type="text" id="bkash-txid" placeholder="Transaction ID">
-      <button id="confirm-payment">Confirm Payment</button>
-    </div>
+    <h3>Customer Details</h3>
+    <form id="order-form">
+      <label>Name:<input type="text" id="customer-name" required></label><br>
+      <label>Email:<input type="email" id="customer-email" required></label><br>
+      <label>Phone:<input type="text" id="customer-phone" required></label><br>
+      <label>Address:<textarea id="customer-address" required></textarea></label><br>
+      <label>Transaction ID (BKash):<input type="text" id="bkash-txid" required></label><br>
+      <button type="submit" id="confirm-order">Place Order</button>
+    </form>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 I’mperfect. All Rights Reserved.</p>
+      &copy; 2025 I’mperfect. All rights reserved.
     </div>
   </footer>
 
